--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -7,3 +7,12 @@ repository = { workspace = true }
 license = { workspace = true }
 
 [dependencies]
+tokio = { workspace = true, features = ["macros", "sync"] }
+axum = { version = "0.6.6", features = ["ws", "headers"] }
+futures = "0.3.26"
+headers = "0.3.8"
+tower-http = { version = "0.3.5", features = ["trace"] }
+tracing = "0.1.37"
+tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
+serde_json.workspace = true
+serde = { workspace = true, features = ["derive"] }
