--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ repository = "https://github.com/racer-wtf/backend"
 ethers = { version = "1.0.2", features = ["ws"] }
 serde = "1.0"
 serde_json = "1.0"
+tokio = { version = "1", features = ["full"] }
