--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ ethers = { version = "1.0.2", features = ["ws"] }
 serde = "1.0"
 serde_json = "1.0"
 tokio = { version = "1", features = ["full"] }
+dotenvy = "0.15.6"
