--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -16,3 +16,4 @@ tracing = "0.1.37"
 tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
 serde_json.workspace = true
 serde = { workspace = true, features = ["derive"] }
+dotenvy = { workspace = true }
