--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,5 @@ serde = "1.0"
 serde_json = "1.0"
 tokio = { version = "1", features = ["full"] }
 dotenvy = "0.15.6"
+tracing = "0.1.37"
+tracing-subscriber = "0.3.16"
