--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ tokio = { version = "1", features = ["full"] }
 dotenvy = "0.15.6"
 tracing = "0.1.37"
 tracing-subscriber = "0.3.16"
+sqlx = "0.6"
