--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,6 +1,6 @@
 FROM rust:latest
 COPY . .
 RUN cargo build --release --bin server
-ARG DATABSE_URL
+ARG DATABASE_URL
 ARG RPC_URL
 CMD ["./target/release/server"]
